# last_engine

./: Cargo.toml  README.md  foo.txt  imgui.ini
res/: torus.glb
shader_macro/: Cargo.toml
shader_macro/src/: lib.rs  templates.rs
src/: gameplay.rs  launch.json  main.rs
src/black_sheep/: constants.rs  ecs.rs  gameplay.rs  gamestate.rs  gl_debug.rs  imgui_system.rs  loader.rs  loop_timing.rs  math.rs  mod.rs  point_cloud.rs  point_grid.rs  q_i_square_root.rs  settings.rs  setup.rs  softbody.rs  torus.rs  transform.rs
src/black_sheep/algorithms/: mod.rs
src/black_sheep/camera/: mod.rs  structs.rs
src/black_sheep/canvas/: mod.rs  uitl.rs
src/black_sheep/gamestate/: ecs.rs  input_flags.rs  job.rs  mod.rs
src/black_sheep/gamestate/camera/: structs.rs
src/black_sheep/generators/: boxes.rs  mod.rs  point_circle.rs  point_cloud.rs  structogram.rs  voxels.rs
src/black_sheep/rendering/: loader.rs  mod.rs  rendertarget.rs
src/black_sheep/rendering/geometry/: imgui_mesh.rs  mesh.rs  mesh_imgui.rs  mesh_util.rs  mod.rs  unique_index.rs
src/black_sheep/rendering/shader/: mod.rs  shader_structs.rs  shader_util.rs
src/black_sheep/rendering/shader/shader_res/2D_circles/: fs.glsl  gs.glsl  vs.glsl
src/black_sheep/rendering/shader/shader_res/2D_points/: fs.glsl  gs.glsl  vs.glsl
src/black_sheep/rendering/shader/shader_res/2D_simple/: fs.glsl  vs.glsl
src/black_sheep/rendering/shader/shader_res/3D_color/: Shading.fs.glsl  Shading.vs.glsl
src/black_sheep/rendering/shader/shader_res/3D_color_light/: Shading.fs.glsl  Shading.vs.glsl
src/black_sheep/rendering/shader/shader_res/_not_in_use/: Shading.vs.glsl  StandardShading.vs.glsl  StandardShadingTransparent.fs.glsl
src/black_sheep/rendering/shader/shader_res/arrow/: gs_cloud.glsl
src/black_sheep/rendering/shader/shader_res/canvas_image/: fs.glsl  vs.glsl
src/black_sheep/rendering/shader/shader_res/cloud/: gs_cloud.glsl  gvs_cloud.glsl
src/black_sheep/rendering/shader/shader_res/cloud_circle/: gfs_cloud.glsl  gs_cloud.glsl  gvs_cloud.glsl
src/black_sheep/rendering/shader/shader_res/colored_triangles/: fs.glsl  vs.glsl
src/black_sheep/rendering/shader/shader_res/double_sphere/: fs.glsl  vs.glsl
src/black_sheep/script/: debth_stack.rs  imgui_structogram.rs  impls.rs  mod.rs  structogram.rs
src/black_sheep/window/: mod.rs  util.rs  window_util.rs
src/black_sheep/world/: mod.rs  structs.rs
(+24 files in other folders)
