[package]
name = "last_engine"
version = "0.1.0"
authors = ["DanielKrottendorfer <krotttendorfer@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sdl2 = {version = "0.34.5" , features = ["static-link"]}
gl = "0.14.0"
cgmath = "0.18.0"
bitflags = "1.3.2"

shader_macro = {git = "https://github.com/DanielKrottendorfer/gl_shader_macro.git"}

[features]
vsync_off = []