[package]
name = "last_engine"
version = "0.1.0"
authors = ["DanielKrottendorfer <krotttendorfer@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sdl2 = {version = "0.34.5" , features = ["static-link", "bundled"]}
gl = "0.14.0"
cgmath = "0.18.0"
bitflags = "2.4.1"
imgui = "0.8.0"
image = "0.23.14"
winapi = "0.3.9"
itertools = "0.10.1"
lazy_static = "1.4.0"
rand = {version = "0.8.4" , features = ["small_rng"]}
gltf = "1.0.0"

shader_macro = {git = "https://github.com/DanielKrottendorfer/gl_shader_macro.git"}
chained_component_system = {git = "https://github.com/DanielKrottendorfer/chained_component_system.git"}

[features]

vsync_off = []
debug_off = []
fps_off = []
gl_debug = []